# Chain-of-Cafes-POO_c-

./: Matrice de testare-Cafenele.numbers  Matrice de testare-Cafenele.xlsx  README.md
CoffeManagementSystem/: CMakeLists.txt
CoffeManagementSystem/CSV_FILES/: cafenele.csv  clientiFideliOnChain.csv  compozitieProduse&&produseBrute.csv  costPreparare&Cumparare.csv
CoffeManagementSystem/CSV_FILES/Brasov/: Angajati_Functii.csv  Comenzi.csv  Produse_Preturi.csv
CoffeManagementSystem/CSV_FILES/Bucuresti/: Angajati_Functii.csv  Comenzi.csv  Produse_Preturi.csv  evenimenteSpeciale.csv  raportZ.csv  stoc.csv
CoffeManagementSystem/CSV_FILES/Cluj/: Angajati_Functii.csv  Comenzi.csv  Produse.csv  Produse_Preturi.csv  stoc.csv
CoffeManagementSystem/CSV_FILES/Iasi/: Angajati_Functii.csv  Comenzi.csv  Produse_Preturi.csv  Stoc_Ingrediente.csv
CoffeManagementSystem/CSV_FILES/Timisoara/: Angajati_Functii.csv  Comenzi.csv  Produse_Preturi.csv  stoc.csv
CoffeManagementSystem/CSV_FILES_ENGLISH/Bucharest/: Employees_Roles.csv  stock.csv  (+2 more)
CoffeManagementSystem/include_headers/: CSVHandler.h  Employee.h  Globals.h  Order.h  Product.h  adaugareClientFidel.h  adaugareComanda.h  cafe_chain.h  evenimenteSpeciale.h  inchidereZi.h  ingredient.h  listareFisiere.h  optiunea6.h  optiunea7.h  schimbare_caracteristici.h
CoffeManagementSystem/src/: CSVHandler.cpp  Employee.cpp  adaugareComanda.cpp  cafe_chain.cpp  evenimenteSpeciale.cpp  inchidereZi.cpp  ingredient.cpp  listareFisiere.cpp  main.cpp  optiunea6.cpp  optiunea7.cpp  schimbare_caracteristici.cpp  tempCodeRunnerFile.cpp
(+3 files in other folders)
